--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -557,10 +557,9 @@
 <template name="personModal">
   <block wx:for="{{list}}"  wx:key="{{index}}"> 
   <!-- wx:if="{{item.handle_status != 2}}"   -->
-    <view  class="{{item.push_id ==  push_id ? 'hide':''}}" wx:if="{{item.handle_status != 3}}">
+    <view  class="{{item.push_id ==  push_id ? 'hide':''}}" >
       <view class="outBox">
-         <!-- <view class="classname">{{item.message_status}}||{{item.handle_status}}</view>  -->
-        <view class="redPoint {{cancel ? 'hidePoint':''}}" wx:if="{{type != 2}}"  wx:if="{{item.message_status==0 ||item.handle_status}}"></view>
+        <view class="redPoint" wx:if="{{type != 2}}"  wx:if="{{item.message_status ==0 }}"></view>
         <view class="insideBox">
         <view  data-project="{{item.project_id}}"  catchtap="projectDetail">
           <view class="flex">
@@ -572,7 +571,6 @@
             <block wx:for="{{item.pro_industry}}" wx:key="{{index}}"wx:for-item ='industry'>
               <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label> 
               <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
-              <!-- <label>{{item.pro_industry.length}}</label> -->
             </block>
           </view>
           <view class="allProjectDetail flex"  wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
@@ -599,8 +597,8 @@
           <view class="projectInfo flex" wx:if="{{type == 0}}">
             <view class="seeNum">{{item.view_count}}人看过项目</view>
             <view class="interest flex">
-              <view class="btnHaveInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0}}" data-status="{{1}}">感兴趣</view>
-              <view class="btnNoInterest" catchtap="interesting"   data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0}}" data-status="{{2}}">没兴趣</view>
+              <view class="btnHaveInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}">感兴趣</view>
+              <view class="btnNoInterest" catchtap="interesting"   data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}">没兴趣</view>
               <view class="haveInterest"  wx:if="{{item.handle_status == 1}}">感兴趣</view> 
             </view>
           </view>
@@ -609,8 +607,8 @@
             <view class="seeNum">{{item.view_count}}人看过项目</view>
             <view class="interest flex">
               <view class="appling" wx:if="{{item.handle_status == 0}}">申请中</view>
-              <view class="agreeToRead" wx:if="{{item.handle_status == 1}}">同意查看</view>
-              <view class="toAccreditation" wx:if="{{item.handle_status == 2}}" catchtap="matchReApply" data-project="{{item.project_id}}">重新申请</view>
+              <view class="agreeToRead" wx:if="{{item.handle_status == 1}}" >同意查看</view>
+              <view class="toAccreditation" wx:if="{{item.handle_status == 2}}" catchtap="matchReApply" data-project="{{item.project_id}}" data-content="{{1}}">重新申请</view>
             </view>
           </view>
           <!--匹配推荐  -->
@@ -717,7 +715,7 @@
       </view>
       <!--名片内容  -->
       <view class="outsideBox" data-project="{{item.user.user_id}}" catchtap="personDetail">
-        <view class="redPoint"  wx:if="{{item.message_status==0}}"></view>
+        <view class="redPoint"  wx:if="{{item.message_status == 0}}"></view>
         <view class="classname" >
         <image src="/img/img-quanwang@2x.png" class="connection" wx:if="{{item.user.follow_status != 1}}"></image>
         <image src="/img/img-wode@2x.png" class="connection" wx:if="{{item.user.follow_status == 1}}"></image>
