--- a/Weitianshi/pages/message/pushProject/pushProject.wxml
+++ b/Weitianshi/pages/message/pushProject/pushProject.wxml
@@ -11,18 +11,102 @@
   <swiper-item>
     <scroll-view bindscrolltolower="loadMore" scroll-top="{{scroll}}" scroll-y="true">
       <template is="allNumber" data="{{count:count1,text:'推送给我的项目'}}"></template>
-      <template is="personModal" data="{{list:pushToList,push_id:push_id,type:0}}"></template>
+      <block wx:for="{{pushToList}}" wx:key="{{index}}">
+        <view class="{{item.push_id ==  push_id ? 'hide':''}}" wx:if="{{item.handle_status != 2}}" >
+          <view class="outBox">
+            <view class="redPoint" wx:if="{{item.message_status == 0}}"></view>
+            <view class="insideBox">
+              <view data-project="{{item.project_id}}" catchtap="projectDetail">
+                <view class="flex">
+                  <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
+                  <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+                  <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 2}}"></image>
+                </view>
+                <view class="allIndustry" style="text-align:left">
+                  <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
+                    <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index < item.pro_industry.length-1}}">{{industry.industry_name}}、</label>
+                    <label class="{{industry.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index == item.pro_industry.length-1}}">{{industry.industry_name}}</label>
+                  </block>
+                </view>
+                <view class="allProjectDetail flex" wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+                  <view class="{{item.pro_scale.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}}</view>
+                  <view class="{{item.pro_finance_stock_after.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}" wx:if="{{item.pro_finance_stock_after != ''}}">{{item.pro_finance_stock_after}}%</view>
+                  <view class="{{item.pro_stage.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}" wx:if="{{item.pro_stage != ''}}">{{item.pro_stage.stage_name}}</view>
+                  <view class="{{item.pro_area.area_title.is_match == 1 ? 'projectDetailLight' : 'projectDetailLine'}}" wx:if="{{item.pro_area != ''}}">{{item.pro_area.area_title}}</view>
+                </view>
+                <view class="flex otherInfo">
+                  <view>
+                    <image src="{{item.user.investor_logo_url}}" class="others_pic" wx:if="{{item.user.investor_logo_url}}" />
+                    <view class="user_text flex" wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
+                  </view>
+                  <view>
+                    <view class="flex userInfo">
+                      <view class="userName">{{item.user.user_name}}</view>
+                      <view class="userCareer">{{item.user.user_career}}</view>
+                      <view class="userCompany" style="text-align:left">{{item.user.user_company}}</view>
+                    </view>
+                  </view>
+                </view>
+              </view>
+              <!--推送给我的项目  -->
+              <view class="projectInfo flex">
+                <view class="seeNum">{{item.view_count}}人看过项目</view>
+                <view class="interest flex">
+                  <view class="btnHaveInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}">感兴趣</view>
+                  <view class="btnNoInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}">没兴趣</view>
+                  <view class="haveInterest" wx:if="{{item.handle_status == 1}}">感兴趣</view>
+                </view>
+              </view>
+            </view>
+            <view id="time">{{item.created_at}}</view>
+          </view>
+        </view>
+      </block>
+      <view class="highBox"></view>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <template is="hasNothing" data="{{emptyNumber:pushToList}}"></template>
     </scroll-view>
   </swiper-item>
   <!--我推送的项目 -->
   <swiper-item>
-    <scroll-view scroll-y="true" scroll-top="{{scroll}}" bindscrolltolower="moreForApply"> 
+    <scroll-view scroll-y="true" scroll-top="{{scroll}}" bindscrolltolower="moreForApply">
       <template is="allNumber" data="{{count:count,text:'我推送的项目'}}"></template>
-       <template is="pushProject" data="{{contentList:pushProjectList,record_id:0,type:1,cancel:cancel}}"></template>
-       <template is="hasNothing" data="{{emptyNumber:pushProjectList}}"></template>
+      <template is="pushProject" data="{{contentList:pushProjectList,record_id:0,type:1}}"></template>
+      <template is="hasNothing" data="{{emptyNumber:pushProjectList}}"></template>
     </scroll-view>
   </swiper-item>
 </swiper>
 <!--没有更多-->
-  <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+<view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
