--- a/Weitianshi/pages/myProject/pushTo/pushTo.wxml
+++ b/Weitianshi/pages/myProject/pushTo/pushTo.wxml
@@ -33,8 +33,8 @@
   </scroll-view>
 </view>
 
-<view class="floatBtn flex pushPro">
-  <view class="pushProjectAfter" bindtap="pushTo">推送</view>
+<view class="floatBtn flex pushPro"  bindtap="pushTo">
+  <view class="pushProjectAfter">推送</view>
 </view>
 <!-- 错误提示-->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
