--- a/Weitianshi/pages/my/cardEdit/cardEdit.wxml
+++ b/Weitianshi/pages/my/cardEdit/cardEdit.wxml
@@ -7,7 +7,7 @@
   </view>
   <view class="card">
     <view class="text">姓名*</view>
-    <input class="" id="name" value="{{user_info.user_real_name}}" bindblur="nameEdit" />
+    <input class="" id="name"  maxlength="40"  value="{{user_info.user_real_name}}" bindblur="nameEdit" />
   </view>
   <view class="card">
     <view class="text">手机*</view>
