--- a/Weitianshi/pages/message/applyPerson/applyPerson.wxml
+++ b/Weitianshi/pages/message/applyPerson/applyPerson.wxml
@@ -2,7 +2,7 @@
 <view class="s_frame">
   <scroll-view scroll-y="true" scroll-top="{{scroll}}" bindscrolltolower="moreForApply" >
     <template is="allNumber" data="{{count:count,text:'申请查看我的项目'}}"></template>
-    <template is="pushProject" data="{{contentList:contentList,type:0,record_id:record_id}}"></template>
+    <template is="pushProjectTo" data="{{contentList:contentList,type:0,record_id:record_id}}"></template>
     <template is="hasNothing" data="{{emptyNumber:contentList}}"></template>
   </scroll-view>
 </view>
