--- a/Weitianshi/pages/message/pushProject/pushProject.wxml
+++ b/Weitianshi/pages/message/pushProject/pushProject.wxml
@@ -37,7 +37,7 @@
                 <view class="flex otherInfo">
                   <view>
                     <image src="{{item.user.investor_logo_url}}" class="others_pic" wx:if="{{item.user.investor_logo_url}}" />
-                    <view class="user_text flex" wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
+                    <view class="user_apply flex" wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
                   </view>
                   <view>
                     <view class="flex userInfo">
@@ -103,7 +103,7 @@
   <swiper-item>
     <scroll-view scroll-y="true" scroll-top="{{scroll}}" bindscrolltolower="moreForApply">
       <template is="allNumber" data="{{count:count,text:'我推送的项目'}}"></template>
-      <template is="pushProject" data="{{contentList:pushProjectList,record_id:0,type:1}}"></template>
+      <template is="pushProjectTo" data="{{contentList:pushProjectList,record_id:0,type:1}}"></template>
       <template is="hasNothing" data="{{emptyNumber:pushProjectList}}"></template>
     </scroll-view>
   </swiper-item>
