--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -459,7 +459,7 @@
       <view class="flex number"  wx:if="{{item.type_id != 8}}">
         <label class="netWorkNum" wx:if="{{item.count !=0}}">{{item.count}}</label>
         <label class="netWorkNumAfter" wx:if="{{item.count == 0}}"></label>
-        <image class="iconEdit" src="/img/icon-edit@3x.png"></image>
+        <image class="iconEdit" src="/img/icon-jiantou3@2x.png"></image>
       </view>
        <view  wx:if="{{item.type_id == 8}}">
          <view class="identity"  wx:if="{{status == 0}}" data-status="{{0}}">立即认证</view>
@@ -584,7 +584,7 @@
           <view class="flex otherInfo">
             <view >
               <image src="{{item.user.investor_logo_url}}" class="others_pic"  wx:if="{{item.user.investor_logo_url}}"/>
-              <view class="user_text flex user_image" wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
+              <view class="flex user_image" wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
             </view>
             <view>
               <view class="flex userInfo">
@@ -801,8 +801,10 @@
       <view class="outsideBox" data-project="{{item.user.user_id}}" catchtap="personDetail">
         <view class="redPoint"  wx:if="{{item.message_status == 0}}"></view>
         <view class="classname" >
+       <view wx:if="{{type == 0}}">
         <image src="/img/img-quanwang@2x.png" class="connection" wx:if="{{item.user.follow_status != 1}}"></image>
         <image src="/img/img-wode@2x.png" class="connection" wx:if="{{item.user.follow_status == 1}}"></image>
+       </view>
         <view class="applyMyProject">
           <view class="introduceBox flex">
             <view class="userName">{{item.user.user_real_name}}</view>
