--- a/Weitianshi/pages/message/potentialProject/potentialProject.wxss
+++ b/Weitianshi/pages/message/potentialProject/potentialProject.wxss
@@ -26,10 +26,14 @@
 }
 
 .empty {
-   padding-top: 0; 
+  padding-top: 0;
   width: 252rpx;
   height: 190rpx;
-  margin-top:344rpx;
+  margin-top: 344rpx;
+}
+
+.hasNothing {
+  color: #666;
 }
 
 .browseMeTitle {
@@ -70,6 +74,7 @@
 .insideBox {
   padding: 32rpx 32rpx 24rpx 32rpx;
   background: #fff;
+  border-radius: 8rpx;
 }
 
 .outBox .describle {
@@ -356,7 +361,8 @@
   width: 68rpx;
   height: 68rpx;
   position: absolute;
-  right: 0;
+  right: -2rpx;
+  top:-2rpx;
 }
 
 .userPic {
@@ -441,19 +447,21 @@
   /* margin-top: 18rpx; */
   position: absolute;
   right: 0;
-  top:20rpx;
+  top: 20rpx;
 }
+
 .user_text {
   width: 40rpx;
   height: 40rpx;
   display: block;
   margin-right: 16rpx;
   border-radius: 50%;
-  background:#999999;
+  background: #999;
   font-size: 22rpx;
-  background:#999999;
+  background: #999;
   line-height: 40rpx;
 }
+
 .interest {
   position: absolute;
   /* margin-top: 20rpx; */
@@ -466,6 +474,19 @@
   line-height: 24rpx;
   text-align: right;
 }
+
 .hide {
   display: none;
+}
+
+.user_image {
+  width: 40rpx;
+  height: 40rpx;
+  display: block;
+  margin-right: 16rpx;
+  border-radius: 50%;
+  font-size: 22rpx;
+  background: #f2f2f2;
+  line-height: 40rpx;
+  text-align: center;
 }
