--- a/Weitianshi/pages/my/identity/identityEdit/identityEdit.wxml
+++ b/Weitianshi/pages/my/identity/identityEdit/identityEdit.wxml
@@ -11,7 +11,7 @@
         <view class="flex">
           <view class="personListContent" wx:if="{{!user_info.user_real_name}}">请输入姓名</view>
           <view class="personListContentAfter" wx:if="{{user_info.user_real_name}}">{{user_info.user_real_name}}</view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -21,7 +21,7 @@
         <view class="flex">
           <view class="personListContent" wx:if="{{!user_info.user_mobile}}">请输入手机号码</view>
           <view class="personListContent" wx:if="{{user_info.user_mobile}}">{{user_info.user_mobile}}</view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -31,7 +31,7 @@
         <view class="flex">
           <view class="personListContent" wx:if="{{!user_info.user_brand}}">请输入品牌</view>
           <view class="personListContentAfter" wx:if="{{user_info.user_brand}}">{{user_info.user_brand}}</view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -41,7 +41,7 @@
         <view class="flex">
           <view class="personListContent" wx:if="{{!user_info.user_company_name}}">请输入公司</view>
           <view class="personListContentAfter" wx:if="{{user_info.user_company_name}}">{{user_info.user_company_name}}</view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -51,7 +51,7 @@
         <view class="flex">
           <view class="personListContent" wx:if="{{!user_info.user_company_career}}">请输入职位</view>
           <view class="personListContentAfter" wx:if="{{user_info.user_company_career}}">{{user_info.user_company_career}}</view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -61,7 +61,7 @@
         <view class="flex">
           <view class="personListContent" wx:if="{{!user_info.user_email}}">请输入邮箱</view>
           <view class="personListContentAfter" wx:if="{{user_info.user_email}}">{{user_info.user_email}}</view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -71,7 +71,7 @@
         <view class="flex">
           <view class="personListContent" wx:if="{{!user_info.user_wechat}}">请输入微信</view>
           <view class="personListContentAfter" wx:if="{{user_info.user_wechat}}">{{user_info.user_wechat}}</view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -81,7 +81,7 @@
         <view class="flex">
           <view class="personListContent" wx:if="{{!user_info.user_intro}}">请输入个人描述</view>
           <view class="personListContentAfter" wx:if="{{user_info.user_intro}}">{{user_info.user_intro}}</view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -99,7 +99,7 @@
               <label class="investStyle" wx:if="{{index == invest_info.invest_industry.length-1}}">{{industry.industry_name}}</label>
             </block>
           </view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -114,7 +114,7 @@
               <label class="investStyle" wx:if="{{index == invest_info.invest_stage.length-1}}">{{stage.stage_name}}</label>
             </block>
           </view> 
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -129,7 +129,7 @@
               <label class="investStyle" wx:if="{{index == invest_info.invest_scale.length-1}}">{{scale.scale_money}}</label>
             </block>
           </view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -144,7 +144,7 @@
               <label class="investStyle" wx:if="{{index == invest_info.invest_area.length-1}}">{{area.area_title}}</label>
             </block>
           </view>
-          <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+          <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         </view>
       </view>
     </view>
@@ -159,14 +159,14 @@
             <view class="flex" wx:if="{{group_id == 18 ||group_id == 19}}">
               <view class="chooseContent" wx:if="{{!array[is_alliance]}}">请选择</view>
               <view class="chooseAfter" wx:if="{{array[is_alliance] !=''}}">{{array[is_alliance]}}</view>
-              <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+              <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
             </view>
           </picker> 
            <!-- <picker id="bindFAService" bindchange="bindFAService" value="{{user_info.is_alliance}}" range="{{array}}">
             <view class="flex" wx:if="{{group_id == 18 ||group_id == 19}}">
               <view class="chooseContent" wx:if="{{!array[user_info.is_alliance]}}">请选择</view>
               <view class="chooseAfter" wx:if="{{array[user_info.is_alliance] !=''}}">{{array[user_info.is_alliance]}}</view>
-              <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+              <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
             </view>
           </picker> -->
         </view>
@@ -180,7 +180,7 @@
             <view class="flex">
               <view class="chooseContent" wx:if="{{!array[is_FA_part]}}">请选择</view>
               <view class="chooseAfter" wx:if="{{array[is_FA_part] !=''}}">{{array[is_FA_part]}}</view>
-              <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+              <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
             </view>
           </picker>
         </view>
@@ -194,7 +194,7 @@
             <view class="flex">
               <view class="chooseContent" wx:if="{{!array[is_financing]}}">请选择</view>
               <view class="chooseAfter" wx:if="{{array[is_financing] !=''}}">{{array[is_financing]}}</view>
-              <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+              <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
             </view>
           </picker>
         </view>
@@ -208,7 +208,7 @@
             <view class="flex">
               <view class="chooseContent" wx:if="{{!array[is_saas]}}">请选择</view>
               <view class="chooseAfter" wx:if="{{array[is_saas] !=''}}">{{array[is_saas]}}</view>
-              <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+              <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
             </view>
           </picker>
         </view>
@@ -222,7 +222,7 @@
             <view class="flex">
               <view class="chooseContent" wx:if="{{!array[is_identify_member]}}">请选择</view>
               <view class="chooseAfter" wx:if="{{array[is_identify_member] !=''}}">{{array[is_identify_member]}}</view>
-              <image src="/img/icon-gengduo2@2x.png" class="arrowStyle"></image>
+              <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
             </view>
           </picker>
         </view>
